--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,17 @@ pre-commit = "^2.17.0"
 
 [tool.poe.tasks]
 test = "coverage run -m pytest"
-report = "coverage report -m; coverage html"
+_report = "coverage report -m"
+_gen_html = "coverage html"
+_show_html = 'python -m webbrowser "file://${POE_ROOT}/htmlcov/index.html"'
+coverage = ["test", "_report"]
+html = ["_gen_html", "_show_html"]
 format = "pre-commit run"
 precommit = "pre-commit install"
+
+[tool.coverage.run]
+source = ["src/raycaster"]
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
