--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Test with pytest
       run: |
         python -m poetry run coverage run -m pytest 
-        python -m poetry xml
+        python -m poetry run coverage xml
         
     - uses: codecov/codecov-action@v2
       with:
