--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Test
 
 on:
   push:
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python -m poetry run coverage run -m pytest
+        python -m poetry run coverage run -m pytest -v
         python -m poetry run coverage xml
 
     - uses: codecov/codecov-action@v2
